Fixed display from going out of container

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ body
 
 #display-container
 {
-    width: 500x;
     height: 80px;
     background-color: #616161;
     border: 10px solid #424242;
@@ -29,6 +28,7 @@ body
     justify-content: end;
     padding-right: 10px;
     padding-top: 20px;
+    overflow: auto;
 }
 
 #display
